fixing alignment issues

--- a/src/styles/scss/figures.scss
+++ b/src/styles/scss/figures.scss
@@ -8,6 +8,9 @@
   background: $gray-lighterest;
   border-radius: 3px;
   border: 1px solid $gray-lighter;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   margin: 6px 3px;
   padding: 15px;
 
